--- a/app/src/main/res/layout/layout_diary_row.xml
+++ b/app/src/main/res/layout/layout_diary_row.xml
@@ -28,7 +28,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@color/black_overlay"/>
+            android:src="@color/black_overlay"
+            android:clickable="false"/>
         <TextView
             android:id="@+id/diary_Row_Name"
             android:layout_width="0dp"
