--- a/app/src/main/res/layout/layout_map_n_pictures_verticallist.xml
+++ b/app/src/main/res/layout/layout_map_n_pictures_verticallist.xml
@@ -4,7 +4,7 @@
     android:id="@+id/verticalList_Root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:layout_constraintHeight_percent="0.2">
+    android:background="@drawable/rounded_rectangle_solid">
 
     <Button
         android:id="@+id/verticalList_MoveUp"
@@ -33,11 +33,13 @@
         android:layout_height="0dp"
         android:src="@drawable/blank"
         android:scaleType="centerCrop"
+        android:padding="10dp"
+        android:cropToPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toRightOf="@id/verticalList_MoveDown"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.25" />
+        app:layout_constraintWidth_percent="0.2" />
 
     <TextView
         android:id="@+id/verticalList_Title"
@@ -45,6 +47,7 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:text="IMAGE"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/verticalList_Image"
         app:layout_constraintRight_toLeftOf="@id/verticalList_Delete"
