--- a/app/src/main/res/layout/layout_game_entry_point.xml
+++ b/app/src/main/res/layout/layout_game_entry_point.xml
@@ -86,38 +86,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.6"
+        app:layout_constraintGuide_percent="0.605"
         android:id="@+id/guide_mid_horizontal3"/>
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.71"
+        app:layout_constraintGuide_percent="0.715"
         android:id="@+id/guide_mid_horizontal4"/>
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.82"
+        app:layout_constraintGuide_percent="0.825"
         android:id="@+id/guide_mid_horizontal5"/>
     <ImageButton
-        android:id="@+id/game_start_stage_button"
+        android:id="@+id/game_start_stage_btn"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/game_start_start_btn"
-        android:background="#518AA8"
+        android:background="#D9518AA8"
+        android:scaleType="fitEnd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guide_mid_horizontal3"
-        app:layout_constraintBottom_toTopOf="@id/guide_mid_horizontal4" />
+        app:layout_constraintBottom_toTopOf="@id/guide_mid_horizontal4"/>
     <ImageButton
-        android:id="@+id/game_exit_button"
+        android:id="@+id/game_start_exit_btn"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#518AA8"
+        android:src="@drawable/game_start_exit_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:background="#D95D9EC1"
+        android:scaleType="fitStart"
         app:layout_constraintTop_toBottomOf="@id/guide_mid_horizontal4"
-        app:layout_constraintBottom_toTopOf="@id/guide_mid_horizontal5" />
+        app:layout_constraintBottom_toTopOf="@id/guide_mid_horizontal5"/>
 
 </android.support.constraint.ConstraintLayout>
