--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -7,46 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".diary.Diary_main">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/diary_main_Toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/upper_bar"
-        app:layout_constraintHeight_percent="0.065"
+    <include android:id="@+id/diary_main_Topbar"
+        layout="@layout/layout_common_topbar"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageButton
-            android:id="@+id/diary_main_Back"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
-            android:onClick="diary_onBackClick"
-            android:src="@drawable/logo"
-            android:scaleType="fitCenter"
-            android:padding="0dp"
-            android:background="#00000000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintLeft_toLeftOf="parent" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:layout_marginRight="20dp"
-            android:text="Profile"
-            style="@style/CustomFontStyle"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-    </android.support.constraint.ConstraintLayout>
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/diary_main_TabBar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar"
+        app:layout_constraintTop_toBottomOf="@id/diary_main_Topbar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHeight_percent="0.065">
         <android.support.constraint.ConstraintLayout
