--- a/app/src/main/res/layout/layout_map_n_pictures_verticallist.xml
+++ b/app/src/main/res/layout/layout_map_n_pictures_verticallist.xml
@@ -4,28 +4,47 @@
     android:id="@+id/verticalList_Root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_rectangle_solid">
+    android:background="@drawable/rounded_rectangle"
+    android:layout_marginBottom="10dp">
 
-    <Button
-        android:id="@+id/verticalList_MoveUp"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/verticalList_UpDownBox"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="위로"
-        app:layout_constraintBottom_toTopOf="@id/verticalList_MoveDown"
-        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@id/verticalList_MoveDown"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/verticalList_Image"
+        app:layout_constraintBottom_toBottomOf="@id/verticalList_Image"
+        app:layout_constraintWidth_percent="0.1">
 
-    <Button
-        android:id="@+id/verticalList_MoveDown"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:text="아래로"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/verticalList_MoveUp" />
+        <ImageButton
+            android:id="@+id/verticalList_MoveUp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:src="@drawable/moveup"
+            android:scaleType="centerCrop"
+            android:background="#00000000"
+            app:layout_constraintBottom_toTopOf="@id/verticalList_MoveDown"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/verticalList_MoveDown"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:src="@drawable/movedown"
+            android:background="#00000000"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/verticalList_MoveUp" />
+    </android.support.constraint.ConstraintLayout>
+
 
     <ImageView
         android:id="@+id/verticalList_Image"
@@ -36,10 +55,10 @@
         android:padding="10dp"
         android:cropToPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintLeft_toRightOf="@id/verticalList_MoveDown"
+        app:layout_constraintDimensionRatio="16:9"
+        app:layout_constraintLeft_toRightOf="@id/verticalList_UpDownBox"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.2" />
+        app:layout_constraintWidth_percent="0.3" />
 
     <TextView
         android:id="@+id/verticalList_Title"
@@ -59,11 +78,12 @@
         android:layout_height="0dp"
         android:scaleType="fitXY"
         android:background="#00000000"
+        android:layout_marginRight="10dp"
         android:src="@drawable/delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.15" />
+        app:layout_constraintWidth_percent="0.1" />
 
 </android.support.constraint.ConstraintLayout>
