--- a/app/src/main/res/layout/layout_map_n_pictures_verticallist_new.xml
+++ b/app/src/main/res/layout/layout_map_n_pictures_verticallist_new.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <Button
+    <ImageButton
         android:id="@+id/verticalList_New"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="추가..."/>
+        android:background="@color/colorPrimary"
+        android:src="@drawable/addnew"/>
 </android.support.constraint.ConstraintLayout>
