set after game layout

--- a/app/src/main/res/layout/layout_recycler_view.xml
+++ b/app/src/main/res/layout/layout_recycler_view.xml
@@ -1,12 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <Button
+        android:id="@+id/after_game_quit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toLeftOf="@id/after_game_restart_btn"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/after_game_recyclerview_guideline"
+        app:layout_constraintTop_toTopOf="parent"/>
+    <Button
+        android:id="@+id/after_game_restart_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/after_game_quit_button"
+        app:layout_constraintBottom_toTopOf="@id/after_game_recyclerview_guideline"
+        app:layout_constraintTop_toTopOf="parent"/>
+    <android.support.constraint.Guideline
+        android:id="@+id/after_game_recyclerview_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.1"/>
     <android.support.v7.widget.RecyclerView
-        layout_constraintLeft_toLeftOf="parent"
-        layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/after_game_recyclerview_guideline"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/after_game_recyclerview">
     </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
