--- a/app/src/main/res/layout/layout_after_game_item.xml
+++ b/app/src/main/res/layout/layout_after_game_item.xml
@@ -4,50 +4,50 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="5"
+    <android.support.constraint.Guideline
+        android:id="@+id/after_game_vertical_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.5"
+        android:orientation="vertical"/>
+    <android.support.constraint.Guideline
+        android:id="@+id/after_game_horizontal_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.5"
+        android:orientation="horizontal"/>
+
+    <ImageView
+        android:id="@+id/after_game_place_imageview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="finish"
-            android:id="@+id/after_game_quit_button"/>
+        app:layout_constraintRight_toRightOf="@id/after_game_vertical_guideline"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+        android:id="@+id/after_game_show_place_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/after_game_horizontal_guideline"
+        app:layout_constraintLeft_toRightOf="@id/after_game_vertical_guideline"
+        app:layout_constraintRight_toRightOf="parent"/>
+    <Button
+        android:id="@+id/after_game_see_picture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/after_game_horizontal_guideline"
+        app:layout_constraintBottom_toTopOf="@id/after_game_see_diary"
+        app:layout_constraintLeft_toRightOf="@id/after_game_vertical_guideline"
+        app:layout_constraintRight_toRightOf="parent"
 
-        <ImageView
-            android:id="@+id/after_game_place_imageview"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3" />
-
-        <TextView
-            android:id="@+id/after_game_show_place_name"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="SEE MORE PICTURE"
-                android:layout_weight="1"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="SEE RELATED DIARY"
-                android:layout_weight="1"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
+        android:text="SEE MORE PICTURE" />
+    <Button
+        android:id="@+id/after_game_see_diary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/after_game_see_picture"
+        app:layout_constraintLeft_toRightOf="@id/after_game_vertical_guideline"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="SEE RELATED DIARY" />
 </android.support.constraint.ConstraintLayout>
