--- a/app/src/main/res/layout/activity_diary_map_n_pictures.xml
+++ b/app/src/main/res/layout/activity_diary_map_n_pictures.xml
@@ -53,6 +53,7 @@
                 android:background="#00000000"
                 android:visibility="visible"
                 android:onClick="diary_onEditClick"
+                android:padding="10dp"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
