--- a/app/src/main/res/layout/layout_common_topbar.xml
+++ b/app/src/main/res/layout/layout_common_topbar.xml
@@ -20,6 +20,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="5dp"
         android:src="@drawable/logo"/>
     <TextView
         android:layout_width="wrap_content"
