set next, exit icon in game activity

--- a/app/src/main/res/layout/layout_recycler_view.xml
+++ b/app/src/main/res/layout/layout_recycler_view.xml
@@ -8,6 +8,7 @@
         android:id="@+id/after_game_quit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="exit"
         app:layout_constraintRight_toLeftOf="@id/after_game_restart_btn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/after_game_recyclerview_guideline"
@@ -16,6 +17,7 @@
         android:id="@+id/after_game_restart_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="restart"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/after_game_quit_button"
         app:layout_constraintBottom_toTopOf="@id/after_game_recyclerview_guideline"
