--- a/app/src/main/res/layout/layout_after_game_recycler_view.xml
+++ b/app/src/main/res/layout/layout_after_game_recycler_view.xml
@@ -5,21 +5,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Button
-        android:id="@+id/after_game_quit_button"
+        android:id="@+id/after_game_exit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="exit"
-        app:layout_constraintRight_toLeftOf="@id/after_game_restart_btn"
+        app:layout_constraintRight_toLeftOf="@id/after_game_retry_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/after_game_recyclerview_guideline"
         app:layout_constraintTop_toTopOf="parent"/>
     <Button
-        android:id="@+id/after_game_restart_btn"
+        android:id="@+id/after_game_retry_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="restart"
+        android:text="retry"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/after_game_quit_button"
+        app:layout_constraintLeft_toRightOf="@id/after_game_exit_button"
         app:layout_constraintBottom_toTopOf="@id/after_game_recyclerview_guideline"
         app:layout_constraintTop_toTopOf="parent"/>
     <android.support.constraint.Guideline
