--- a/app/src/main/res/layout/layout_after_game_item.xml
+++ b/app/src/main/res/layout/layout_after_game_item.xml
@@ -1,53 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="190dp">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/game_after_box"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.constraint.Guideline
-        android:id="@+id/after_game_vertical_guideline"
+        android:id="@+id/after_game_vertical_mid_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.5"
-        android:orientation="vertical"/>
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
     <android.support.constraint.Guideline
-        android:id="@+id/after_game_horizontal_guideline"
+        android:id="@+id/after_game_vertical_right_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.5"
-        android:orientation="horizontal"/>
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.9" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/after_game_horizontal_up_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.2" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/after_game_horizontal_mid_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/after_game_horizontal_down_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9" />
 
     <ImageView
         android:id="@+id/after_game_place_imageview"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginLeft="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@id/after_game_vertical_guideline"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="@id/after_game_vertical_mid_guideline"
+        app:layout_constraintTop_toTopOf="@id/after_game_horizontal_up_guideline"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
     <TextView
         android:id="@+id/after_game_show_place_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/after_game_horizontal_guideline"
-        app:layout_constraintLeft_toRightOf="@id/after_game_vertical_guideline"
-        app:layout_constraintRight_toRightOf="parent"/>
-    <Button
-        android:id="@+id/after_game_see_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/after_game_horizontal_guideline"
-        app:layout_constraintBottom_toTopOf="@id/after_game_see_diary"
-        app:layout_constraintLeft_toRightOf="@id/after_game_vertical_guideline"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/after_game_horizontal_mid_guideline"
+        app:layout_constraintLeft_toRightOf="@id/after_game_vertical_mid_guideline"
+        app:layout_constraintRight_toRightOf="parent" />
 
-        android:text="SEE MORE PICTURE" />
-    <Button
-        android:id="@+id/after_game_see_diary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/after_game_see_picture"
-        app:layout_constraintLeft_toRightOf="@id/after_game_vertical_guideline"
-        app:layout_constraintRight_toRightOf="parent"
-        android:text="SEE RELATED DIARY" />
+    <ImageView
+        android:id="@+id/after_game_see_picture_btn"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/game_after_see_picture_btn"
+        app:layout_constraintBottom_toTopOf="@id/after_game_horizontal_down_guideline"
+        app:layout_constraintLeft_toRightOf="@id/after_game_vertical_mid_guideline"
+        app:layout_constraintRight_toLeftOf="@id/after_game_see_diary_btn"
+        app:layout_constraintTop_toBottomOf="@id/after_game_horizontal_mid_guideline" />
+
+    <ImageView
+        android:id="@+id/after_game_see_diary_btn"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/game_after_see_diary_btn"
+        app:layout_constraintBottom_toTopOf="@id/after_game_horizontal_down_guideline"
+        app:layout_constraintLeft_toRightOf="@id/after_game_see_picture_btn"
+        app:layout_constraintRight_toLeftOf="@id/after_game_vertical_right_guideline"
+        app:layout_constraintTop_toBottomOf="@id/after_game_horizontal_mid_guideline" />
 </android.support.constraint.ConstraintLayout>
