--- a/app/src/main/res/layout/layout_diary_row.xml
+++ b/app/src/main/res/layout/layout_diary_row.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:clickable="false">
+    android:clickable="false"
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/diary_Row_Thumbnail"
