--- a/app/src/main/res/layout/layout_zoomin.xml
+++ b/app/src/main/res/layout/layout_zoomin.xml
@@ -22,7 +22,7 @@
             android:id="@+id/diary_ZoomIn_ZoomImage"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="#888888"
+            android:background="#00000000"
             android:clickable="true"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintLeft_toLeftOf="parent"
