Deduplicate CustomFontStyle references
만약 미리보기에 폰트가 적용이 안 되면 미리보기 상단에 있는
테마를 바꿔보기. 그래도 적용이 안 되면 텍스트뷰에 직접 스타일을
적용해보기.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
         android:text="Profile"
-        style="@style/CustomFontStyle"
         app:layout_constraintBottom_toBottomOf="@id/main_upper_guideline"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -44,7 +43,6 @@
         android:layout_height="wrap_content"
         android:text="Main Menu"
         android:textSize="20dp"
-        style="@style/CustomFontStyle"
         android:layout_marginBottom="3dp"
         app:layout_constraintBottom_toTopOf="@id/imageview_game_start"
         app:layout_constraintStart_toStartOf="@id/imageview_game_start" />
