--- a/app/src/main/res/layout/layout_common_topbar.xml
+++ b/app/src/main/res/layout/layout_common_topbar.xml
@@ -1,40 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="0dp"
+    android:background="#FFFFFF"
     app:layout_constraintHeight_percent="0.065"
-    android:background="#FFFFFF">
+    tools:layout_height="50dp">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
         android:onClick="Common_Back_Click"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        style="@style/CustomFontStyle"
-        android:textSize="20dp"/>
+        app:layout_constraintLeft_toLeftOf="parent" />
+
     <ImageView
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:padding="5dp"
-        android:src="@drawable/logo"/>
+        android:src="@drawable/logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginRight="20dp"
         android:text="Profile"
-        style="@style/CustomFontStyle"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#000000"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 </android.support.constraint.ConstraintLayout>
