--- a/app/src/main/res/layout/layout_game_entry_point.xml
+++ b/app/src/main/res/layout/layout_game_entry_point.xml
@@ -42,7 +42,6 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="next: "
-        style="@style/CustomFontStyle"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/guide_mid_horizontal2"
         app:layout_constraintEnd_toStartOf="@id/textview_level"
@@ -57,7 +56,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/textview_level"
         android:text="Level 0"
-        style="@style/CustomFontStyle"
         android:textColor="#FFFFFF"/>
     <TextView
         android:id="@+id/textview_goal"
@@ -65,7 +63,6 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="goal: "
-        style="@style/CustomFontStyle"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/guide_mid_horizontal3"
         app:layout_constraintTop_toBottomOf="@id/guide_mid_horizontal2"
@@ -79,8 +76,7 @@
         android:textSize="35sp"
         android:id="@+id/textview_goal_score"
         android:textColor="#FFFFFF"
-        android:text="000/0"
-        style="@style/CustomFontStyle"/>
+        android:text="000/0" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
