--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textViewStyle">@style/CustomFontStyle</item>
+        <item name="imageButtonStyle">@style/CustomImageButton</item>
     </style>
 
     <style name="FullscreenTheme" parent="AppTheme">
@@ -25,6 +26,11 @@
         <item name="android:textStyle">bold</item>
         <item name="android:fontFamily">@font/custom_font</item>
         <item name="android:textColor">#0D0D59</item>
+    </style>
+
+    <style name="CustomImageButton" parent="Widget.AppCompat.ImageButton">
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:background">@null</item>
     </style>
 
 </resources>
